tests/invalid/subscript_aug_assign_list_type_change/main.py
def main() -> None:
    xs: list[bool] = [True]
    xs[0] += 1
